--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,6 @@
         "php": ">=7.0.8",
         "composer/installers": "~1.0",
         "bennothommo/oc-meta-plugin": "^1.0.3"
-    }
+    },
+    "abandoned": "bennothommo/wn-urlnormaliser-plugin"
 }
